--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   </div>
 </body>
 
-<script src="maintenance_list_T鹿児島_HV_検査員.js"></script>
-<script src="audio_file_T鹿児島_HV_検査員.js"></script>
+<script src="maintenance_list.js"></script>
+<script src="audio_file.js"></script>
 <script type="text/javascript" src="change_speed.js"></script>
 <script type="text/javascript" src="script.js"></script>
 <script type="text/javascript" src="audio_guide.js"></script>
